feat(character): creation routes in characters/create
